Fix for Edirom in xul-wrapper: scroll bars in windows when annots or measure numbers are visible; help button not needed in xul-wrapper; z-index.

--- a/resources/css/EdiromOnlineRWA.css
+++ b/resources/css/EdiromOnlineRWA.css
@@ -1,3 +1,8 @@
+.ediromWindow .x-panel-body {
+    overflow: hidden !important;
+}
+
+
 .sub {
     font-size: 60%;
     vertical-align: sub;
@@ -265,6 +270,15 @@ div#ediromToolbar {
 	border-width: 0 2px 0 1px;
 	border-color: LightGray;
 	border-radius: 3px;
+}
+
+.x-toolbar-separator, #helpBtn{
+display: none;
+    
+}
+
+#ediromTaskbar {
+	z-index: 30000 !important;
 }
 
 #ediromTaskbar .ux-desktop-trayclock {
